BUG #171: Décalage theme par défaut
BUG #174: Mauvaise réécriture d'url avec les liens data:image, javascript et commençant par #
BUG #176: Image preview.png du thème par defaut déformée
BUG #181: Commentaires toujours refusés si capcha désactivé (contribution ortolot)
BUG #182: Affichage en trop si commentaires fermés (contribution josé)

## PLUXML 5.5 (sortie : 01/04/2016) ##

[+] #99, #165: Ajout de la prise en compte des extensions "m4a, m4v, epub, svg, vtt, webm, xcf" dans le gestionnaire de médias
[+] #110: Gestionnaire de médias, ajout des fichiers: Option "Redimensionner images > Taille originale" cochée par défaut
[+] #114: Réécriture de la pagination des articles et des commentaires dans l'administration
[-] #107: Suppression du fichier version, remplacé par la constante PLX_VERSION dans le fichier core/lib/config.php
[+] rédaction d'un article: ajout d'un champs pour avoir une image d'accroche
[+] API pour afficher le gestionnaire de médias dans une fenêtre popup et récuperer l'image sélectionnée dans la fenêtre appelante
[+] Mise à jour traduction polonais: contribution 18jaguar18
[+] Ajout de la constante PLX_FEED
[+] Ajout d'un jeton de sécurité au formulaire des commentaires
[+] Gestionnaire de médias: possibilité de sélectionner plusieurs fichiers à la fois pour l'upload des fichiers
[+] Gestionnaire de médias: visionneuse image en cliquant sur l'icône de la photo
[+] plxUtils::makeThumb - réécriture de la méthode pour générer des images cropées et carré
[+] Réécriture de la méthode plxShow::pageTitle()
[+] Administration: ajout du menu Paramètres > Thèmes
[+] Ajout des hooks: AdminThemesDisplayTop, AdminThemesDisplay, AdminThemesDisplayFoot
[+] Réécriture et optimisation de la fonction plxUtils::rel2abs (contribution bazooka07)
[+] Page statique: gestion de la date de création et de mise à jour
[+] Articles: gestion de la date de création et de mise à jour