@@ -10,6 +10,7 @@ BUG #174: Mauvaise réécriture d'url avec les liens data:image, javascript et c
 BUG #176: Image preview.png du thème par defaut déformée
 BUG #181: Commentaires toujours refusés si capcha désactivé (contribution ortolot)
 BUG #182: Affichage en trop si commentaires fermés (contribution josé)
+BUG #185: Mauvaise cible de téléchargement
 
 ## PLUXML 5.5 (sortie : 01/04/2016) ##
 
